--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -17,6 +17,7 @@
         <a href="/" class="logo">Snappy</a>
         <nav>
           <a href="#features">Возможности</a>
+          <a href="#examples">Примеры</a>
           <a href="#start">Как начать</a>
           <a href="https://t.me/snappy_bot" class="nav-cta" target="_blank" rel="noopener">Открыть в Telegram</a>
         </nav>
@@ -62,13 +63,62 @@
             </div>
             <div class="card">
               <span class="card-icon">😊</span>
-              <h3>Эмодзи</h3>
-              <p>Уместное добавление эмодзи для соцсетей и мессенджеров — живой тон без перегруза.</p>
+              <h3>Эмодзи и форматирование</h3>
+              <p>Snappy умеет возвращать результат сразу в формате Telegram: <strong>жирный</strong>, <em>курсив</em>, моноширинный текст и уместные эмодзи. Готово к отправке в чат — копировать не нужно.</p>
             </div>
             <div class="card">
               <span class="card-icon">🎭</span>
               <h3>Стили</h3>
               <p>Один черновик — разные тона: деловой, дружеский, нейтральный, продающий или юмористический.</p>
+            </div>
+          </div>
+        </section>
+
+        <section id="examples" class="section">
+          <h2>Примеры: было → стало</h2>
+          <p class="section-lead">
+            Результат в боте приходит с форматированием Telegram и эмодзи — так же отображается и на сайте ниже.
+          </p>
+
+          <div class="example-block">
+            <p class="example-label">Исправление ошибок</p>
+            <div class="example-row">
+              <div class="example-box example-was">
+                <span class="example-title">Было</span>
+                <p>привет написал тебе вчера насчёт встречи не знаю получилось ли у тебя прочитать давай созвонимся в среду?</p>
+              </div>
+              <div class="example-box example-stalo">
+                <span class="example-title">Стало</span>
+                <p>Привет! Написал тебе вчера насчёт встречи — не знаю, получилось ли у тебя прочитать. Давай созвонимся в среду?</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="example-block">
+            <p class="example-label">Дружеский стиль + эмодзи</p>
+            <div class="example-row">
+              <div class="example-box example-was">
+                <span class="example-title">Было</span>
+                <p>Семинар переносится на 15:00. Уведомляю всех участников.</p>
+              </div>
+              <div class="example-box example-stalo">
+                <span class="example-title">Стало</span>
+                <p>Эй, друзья! 👋 Семинар переносим на <strong>15:00</strong> — предупреждаю заранее, чтобы все успели. До встречи! ✨</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="example-block">
+            <p class="example-label">Читаемость и структура</p>
+            <div class="example-row">
+              <div class="example-box example-was">
+                <span class="example-title">Было</span>
+                <p>Мы занимаемся доставкой по городу в течение 2 часов при заказе от 1000 рублей при этом у нас действует скидка 10% для новых клиентов.</p>
+              </div>
+              <div class="example-box example-stalo">
+                <span class="example-title">Стало</span>
+                <p>Доставка по городу — <strong>до 2 часов</strong> 🚚<br><br>• При заказе от 1000 ₽<br>• <em>Скидка 10%</em> для новых клиентов 🎁</p>
+              </div>
             </div>
           </div>
         </section>
