--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -19,7 +19,7 @@
           <a href="#features">Возможности</a>
           <a href="#examples">Примеры</a>
           <a href="#start">Как начать</a>
-          <a href="https://t.me/snappy_bot" class="nav-cta" target="_blank" rel="noopener">Открыть в Telegram</a>
+          <a href="https://t.me/sn4ppy_bot" class="nav-cta" target="_blank" rel="noopener">Открыть в Telegram</a>
         </nav>
       </div>
     </header>
@@ -31,7 +31,7 @@
             Snappy — бот в Telegram, который обрабатывает ваш текст с помощью нейросети GigaChat. Отправляете сообщение,
             выбираете действие — получаете результат. Без копирования в сторонние сервисы.
           </p>
-          <a href="https://t.me/snappy_bot" class="btn btn-primary" target="_blank" rel="noopener">Открыть Snappy в Telegram</a>
+          <a href="https://t.me/sn4ppy_bot" class="btn btn-primary" target="_blank" rel="noopener">Открыть Snappy в Telegram</a>
         </section>
 
         <section id="features" class="section">
@@ -83,11 +83,11 @@
           <div class="example-block">
             <p class="example-label">Исправление ошибок</p>
             <div class="example-row">
-              <div class="example-box example-was">
+              <div class="example-box example-before">
                 <span class="example-title">Было</span>
                 <p>привет написал тебе вчера насчёт встречи не знаю получилось ли у тебя прочитать давай созвонимся в среду?</p>
               </div>
-              <div class="example-box example-stalo">
+              <div class="example-box example-after">
                 <span class="example-title">Стало</span>
                 <p>Привет! Написал тебе вчера насчёт встречи — не знаю, получилось ли у тебя прочитать. Давай созвонимся в среду?</p>
               </div>
@@ -97,11 +97,11 @@
           <div class="example-block">
             <p class="example-label">Дружеский стиль + эмодзи</p>
             <div class="example-row">
-              <div class="example-box example-was">
+              <div class="example-box example-before">
                 <span class="example-title">Было</span>
                 <p>Семинар переносится на 15:00. Уведомляю всех участников.</p>
               </div>
-              <div class="example-box example-stalo">
+              <div class="example-box example-after">
                 <span class="example-title">Стало</span>
                 <p>Эй, друзья! 👋 Семинар переносим на <strong>15:00</strong> — предупреждаю заранее, чтобы все успели. До встречи! ✨</p>
               </div>
@@ -111,11 +111,11 @@
           <div class="example-block">
             <p class="example-label">Читаемость и структура</p>
             <div class="example-row">
-              <div class="example-box example-was">
+              <div class="example-box example-before">
                 <span class="example-title">Было</span>
                 <p>Мы занимаемся доставкой по городу в течение 2 часов при заказе от 1000 рублей при этом у нас действует скидка 10% для новых клиентов.</p>
               </div>
-              <div class="example-box example-stalo">
+              <div class="example-box example-after">
                 <span class="example-title">Стало</span>
                 <p>Доставка по городу — <strong>до 2 часов</strong> 🚚<br><br>• При заказе от 1000 ₽<br>• <em>Скидка 10%</em> для новых клиентов 🎁</p>
               </div>
@@ -152,7 +152,7 @@
         <section class="cta-block">
           <h2>Попробуйте Snappy</h2>
           <p>Откройте бота в Telegram и обработайте первый текст за минуту.</p>
-          <a href="https://t.me/snappy_bot" class="btn btn-primary btn-lg" target="_blank" rel="noopener">Открыть в Telegram</a>
+          <a href="https://t.me/sn4ppy_bot" class="btn btn-primary btn-lg" target="_blank" rel="noopener">Открыть в Telegram</a>
         </section>
       </article>
     </main>
@@ -160,7 +160,7 @@
       <div class="footer-inner">
         <span class="logo">Snappy</span>
         <p>Умная обработка текста в Telegram на базе GigaChat.</p>
-        <a href="https://t.me/snappy_bot" target="_blank" rel="noopener">@snappy_bot</a>
+        <a href="https://t.me/sn4ppy_bot" target="_blank" rel="noopener">@sn4ppy_bot</a>
       </div>
     </footer>
   </body>
