--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -35,52 +36,28 @@
         </section>
 
         <section id="features" class="section">
-          <h2>Что умеет Snappy</h2>
-          <p class="section-lead">
+          <h2 data-aos="fade-up">Что умеет Snappy</h2>
+          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
             Один бот для правок, сокращения, расширения и смены тона. Идеально для постов, писем, объявлений и любых
             текстов, где важны точность и тон.
           </p>
           <div class="features-grid">
-            <div class="card">
-              <span class="card-icon">📝</span>
-              <h3>Исправление ошибок</h3>
-              <p>Орфография, пунктуация, грамматика и стиль. Смысл и структура сохраняются — только чистая правка.</p>
-            </div>
-            <div class="card">
-              <span class="card-icon">✂️</span>
-              <h3>Сокращение</h3>
-              <p>Сжатие на 40–50% с сохранением главных мыслей и фактов. Убирает воду и повторы — текст становится ёмким.</p>
-            </div>
-            <div class="card">
-              <span class="card-icon">📖</span>
-              <h3>Расширение</h3>
-              <p>Детализация, примеры и разъяснения. Черновик превращается в развёрнутый текст без потери стиля.</p>
-            </div>
-            <div class="card">
-              <span class="card-icon">👁️</span>
-              <h3>Читаемость</h3>
-              <p>Короткие предложения, чёткие абзацы, списки. Сложные формулировки упрощаются без потери смысла.</p>
-            </div>
-            <div class="card">
-              <span class="card-icon">😊</span>
-              <h3>Эмодзи и форматирование</h3>
-              <p>Snappy умеет возвращать результат сразу в формате Telegram: <strong>жирный</strong>, <em>курсив</em>, моноширинный текст и уместные эмодзи. Готово к отправке в чат — копировать не нужно.</p>
-            </div>
-            <div class="card">
-              <span class="card-icon">🎭</span>
-              <h3>Стили</h3>
-              <p>Один черновик — разные тона: деловой, дружеский, нейтральный, продающий или юмористический.</p>
-            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="100"><span class="card-icon">📝</span><h3>Исправление ошибок</h3><p>Орфография, пунктуация, грамматика и стиль. Смысл и структура сохраняются — только чистая правка.</p></div>
+            <div class="card" data-aos="fade-up" data-aos-delay="150"><span class="card-icon">✂️</span><h3>Сокращение</h3><p>Сжатие на 40–50% с сохранением главных мыслей и фактов. Убирает воду и повторы — текст становится ёмким.</p></div>
+            <div class="card" data-aos="fade-up" data-aos-delay="200"><span class="card-icon">📖</span><h3>Расширение</h3><p>Детализация, примеры и разъяснения. Черновик превращается в развёрнутый текст без потери стиля.</p></div>
+            <div class="card" data-aos="fade-up" data-aos-delay="250"><span class="card-icon">👁️</span><h3>Читаемость</h3><p>Короткие предложения, чёткие абзацы, списки. Сложные формулировки упрощаются без потери смысла.</p></div>
+            <div class="card" data-aos="fade-up" data-aos-delay="300"><span class="card-icon">😊</span><h3>Эмодзи и форматирование</h3><p>Snappy умеет возвращать результат сразу в формате Telegram: <strong>жирный</strong>, <em>курсив</em>, моноширинный текст и уместные эмодзи. Готово к отправке в чат — копировать не нужно.</p></div>
+            <div class="card" data-aos="fade-up" data-aos-delay="350"><span class="card-icon">🎭</span><h3>Стили</h3><p>Один черновик — разные тона: деловой, дружеский, нейтральный, продающий или юмористический.</p></div>
           </div>
         </section>
 
         <section id="examples" class="section">
-          <h2>Примеры: было → стало</h2>
-          <p class="section-lead">
+          <h2 data-aos="fade-up">Примеры: было → стало</h2>
+          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
             Результат в боте приходит с форматированием Telegram и эмодзи — так же отображается и на сайте ниже.
           </p>
 
-          <div class="example-block">
+          <div class="example-block" data-aos="fade-up" data-aos-delay="100">
             <p class="example-label">Исправление ошибок</p>
             <div class="example-row">
               <div class="example-box example-before">
@@ -94,7 +71,7 @@
             </div>
           </div>
 
-          <div class="example-block">
+          <div class="example-block" data-aos="fade-up" data-aos-delay="200">
             <p class="example-label">Дружеский стиль + эмодзи</p>
             <div class="example-row">
               <div class="example-box example-before">
@@ -108,7 +85,7 @@
             </div>
           </div>
 
-          <div class="example-block">
+          <div class="example-block" data-aos="fade-up" data-aos-delay="300">
             <p class="example-label">Читаемость и структура</p>
             <div class="example-row">
               <div class="example-box example-before">
@@ -124,32 +101,32 @@
         </section>
 
         <section class="section section-alt">
-          <h2>Готовые стили текста</h2>
-          <p class="section-lead">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
+          <h2 data-aos="fade-up">Готовые стили текста</h2>
+          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <ul class="styles-list">
-            <li><strong>Деловой</strong> — официально и по делу</li>
-            <li><strong>Дружеский</strong> — тепло и на «ты»</li>
-            <li><strong>Нейтральный</strong> — объективно и по факту</li>
-            <li><strong>Продающий</strong> — выгоды и призывы к действию</li>
-            <li><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
+            <li data-aos="fade-right" data-aos-delay="100"><strong>Деловой</strong> — официально и по делу</li>
+            <li data-aos="fade-right" data-aos-delay="150"><strong>Дружеский</strong> — тепло и на «ты»</li>
+            <li data-aos="fade-right" data-aos-delay="200"><strong>Нейтральный</strong> — объективно и по факту</li>
+            <li data-aos="fade-right" data-aos-delay="250"><strong>Продающий</strong> — выгоды и призывы к действию</li>
+            <li data-aos="fade-right" data-aos-delay="300"><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
           </ul>
         </section>
 
         <section id="start" class="section">
-          <h2>Как начать</h2>
-          <ol class="steps">
+          <h2 data-aos="fade-up">Как начать</h2>
+          <ol class="steps" data-aos="fade-up" data-aos-delay="100">
             <li>Добавьте Snappy в Telegram по ссылке ниже.</li>
             <li>Отправьте боту любой текст — сообщение, пост или черновик.</li>
             <li>Выберите действие: исправить, сократить, расширить, изменить стиль и т.д.</li>
             <li>Получите результат сразу в чате.</li>
           </ol>
-          <p class="section-note">
+          <p class="section-note" data-aos="fade-up" data-aos-delay="150">
             Подходит для соцсетей, писем, объявлений и любых задач, где важны скорость и качество текста. Быстрее и
             проще, чем править вручную или гонять текст по разным сервисам.
           </p>
         </section>
 
-        <section class="cta-block">
+        <section class="cta-block" data-aos="zoom-in">
           <h2>Попробуйте Snappy</h2>
           <p>Откройте бота в Telegram и обработайте первый текст за минуту.</p>
           <a href="https://t.me/sn4ppy_bot" class="btn btn-primary btn-lg" target="_blank" rel="noopener">Открыть в Telegram</a>
@@ -163,5 +140,14 @@
         <a href="https://t.me/sn4ppy_bot" target="_blank" rel="noopener">@sn4ppy_bot</a>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 600,
+        easing: "ease-out-cubic",
+        once: true,
+        offset: 60
+      });
+    </script>
   </body>
 </html>
