--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -104,11 +104,11 @@
           <h2 data-aos="fade-up">Готовые стили текста</h2>
           <p class="section-lead" data-aos="fade-up" data-aos-delay="50">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <ul class="styles-list">
-            <li data-aos="fade-right" data-aos-delay="100"><strong>Деловой</strong> — официально и по делу</li>
-            <li data-aos="fade-right" data-aos-delay="150"><strong>Дружеский</strong> — тепло и на «ты»</li>
-            <li data-aos="fade-right" data-aos-delay="200"><strong>Нейтральный</strong> — объективно и по факту</li>
-            <li data-aos="fade-right" data-aos-delay="250"><strong>Продающий</strong> — выгоды и призывы к действию</li>
-            <li data-aos="fade-right" data-aos-delay="300"><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
+            <li data-aos="fade" data-aos-delay="80"><strong>Деловой</strong> — официально и по делу</li>
+            <li data-aos="fade" data-aos-delay="120"><strong>Дружеский</strong> — тепло и на «ты»</li>
+            <li data-aos="fade" data-aos-delay="160"><strong>Нейтральный</strong> — объективно и по факту</li>
+            <li data-aos="fade" data-aos-delay="200"><strong>Продающий</strong> — выгоды и призывы к действию</li>
+            <li data-aos="fade" data-aos-delay="240"><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
           </ul>
         </section>
 
@@ -143,7 +143,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
       AOS.init({
-        duration: 600,
+        duration: 400,
         easing: "ease-out-cubic",
         once: true,
         offset: 60
