--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -27,7 +27,7 @@
     <main id="main">
       <article>
         <section class="hero">
-          <h1>Текст как нужно — в один тап</h1>
+          <h1>✨ Текст как нужно — в один тап</h1>
           <p class="hero-lead">
             Snappy — бот в Telegram, который обрабатывает ваш текст с помощью нейросети GigaChat. Отправляете сообщение,
             выбираете действие — получаете результат. Без копирования в сторонние сервисы.
@@ -36,7 +36,7 @@
         </section>
 
         <section id="features" class="section">
-          <h2 data-aos="fade-up">Что умеет Snappy</h2>
+          <h2 data-aos="fade-up">🛠️ Что умеет Snappy</h2>
           <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
             Один бот для правок, сокращения, расширения и смены тона. Идеально для постов, писем, объявлений и любых
             текстов, где важны точность и тон.
@@ -52,7 +52,7 @@
         </section>
 
         <section id="examples" class="section">
-          <h2 data-aos="fade-up">Примеры: было → стало</h2>
+          <h2 data-aos="fade-up">📝 Примеры: было → стало</h2>
           <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
             Результат в боте приходит с форматированием Telegram и эмодзи — так же отображается и на сайте ниже.
           </p>
@@ -101,7 +101,7 @@
         </section>
 
         <section class="section section-alt">
-          <h2 data-aos="fade-up">Готовые стили текста</h2>
+          <h2 data-aos="fade-up">🎭 Готовые стили текста</h2>
           <p class="section-lead" data-aos="fade-up" data-aos-delay="50">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <ul class="styles-list">
             <li data-aos="fade" data-aos-delay="80"><strong>Деловой</strong> — официально и по делу</li>
@@ -113,7 +113,7 @@
         </section>
 
         <section id="start" class="section">
-          <h2 data-aos="fade-up">Как начать</h2>
+          <h2 data-aos="fade-up">🚀 Как начать</h2>
           <ol class="steps" data-aos="fade-up" data-aos-delay="100">
             <li>Добавьте Snappy в Telegram по ссылке ниже.</li>
             <li>Отправьте боту любой текст — сообщение, пост или черновик.</li>
@@ -127,7 +127,7 @@
         </section>
 
         <section class="cta-block" data-aos="zoom-in">
-          <h2>Попробуйте Snappy</h2>
+          <h2>💬 Попробуйте Snappy</h2>
           <p>Откройте бота в Telegram и обработайте первый текст за минуту.</p>
           <a href="https://t.me/sn4ppy_bot" class="btn btn-primary btn-lg" target="_blank" rel="noopener">Открыть в Telegram</a>
         </section>
