--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Исправляйте ошибки, меняйте стиль и тон текста за секунды. Бот в Telegram на базе GigaChat — без копирования в сторонние сервисы." />
+    <meta name="description" content="Исправляйте ошибки, меняйте стиль и тон текста за секунды. Бот в Telegram с искусственным интеллектом — без копирования в сторонние сервисы." />
     <title>Snappy — умная обработка текста в Telegram</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,8 +29,8 @@
         <section class="hero">
           <h1>✨ Текст как нужно — в один тап</h1>
           <p class="hero-lead">
-            Snappy — бот в Telegram, который обрабатывает ваш текст с помощью нейросети GigaChat. Отправляете сообщение,
-            выбираете действие — получаете результат. Без копирования в сторонние сервисы.
+            Snappy — умный бот в Telegram с ИИ-помощником для текста. Отправляете сообщение, выбираете действие —
+            <strong>результат сразу в чате</strong>.
           </p>
           <a href="https://t.me/sn4ppy_bot" class="btn btn-primary" target="_blank" rel="noopener">Открыть Snappy в Telegram</a>
         </section>
@@ -136,7 +136,7 @@
     <footer class="site-footer">
       <div class="footer-inner">
         <span class="logo">Snappy</span>
-        <p>Умная обработка текста в Telegram на базе GigaChat.</p>
+        <p>Умная обработка текста в Telegram с искусственным интеллектом.</p>
         <a href="https://t.me/sn4ppy_bot" target="_blank" rel="noopener">@sn4ppy_bot</a>
       </div>
     </footer>
