--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Исправляйте ошибки, меняйте стиль и тон текста за секунды. Бот в Telegram с искусственным интеллектом — без копирования в сторонние сервисы." />
+    <meta
+      name="description"
+      content="Исправляйте ошибки, меняйте стиль и тон текста за секунды. Бот в Telegram с искусственным интеллектом — без копирования в сторонние сервисы."
+    />
     <title>Snappy — умная обработка текста в Telegram</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,7 +23,14 @@
           <a href="#features">Возможности</a>
           <a href="#examples">Примеры</a>
           <a href="#start">Как начать</a>
-          <a href="https://t.me/sn4ppy_bot" class="nav-cta" target="_blank" rel="noopener"><span class="icon-telegram" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg></span>Открыть в Telegram</a>
+          <a href="https://t.me/sn4ppy_bot" class="nav-cta" target="_blank" rel="noopener"
+            ><span class="icon-telegram" aria-hidden="true"
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                <path
+                  d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"
+                /></svg></span
+            >Открыть в Telegram</a
+          >
         </nav>
       </div>
     </header>
@@ -32,7 +42,14 @@
             Snappy — умный бот в Telegram с ИИ-помощником для текста. Отправляете сообщение, выбираете действие —
             <strong>результат сразу в чате</strong>.
           </p>
-          <a href="https://t.me/sn4ppy_bot" class="btn btn-primary" target="_blank" rel="noopener"><span class="icon-telegram" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg></span>Открыть Snappy в Telegram</a>
+          <a href="https://t.me/sn4ppy_bot" class="btn btn-primary" target="_blank" rel="noopener"
+            ><span class="icon-telegram" aria-hidden="true"
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                <path
+                  d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"
+                /></svg></span
+            >Открыть Snappy в Telegram</a
+          >
         </section>
 
         <section id="features" class="section">
@@ -42,12 +59,41 @@
             текстов, где важны точность и тон.
           </p>
           <div class="features-grid">
-            <div class="card" data-aos="fade-up" data-aos-delay="100"><span class="card-icon">📝</span><h3>Исправление ошибок</h3><p>Орфография, пунктуация, грамматика и стиль. Смысл и структура сохраняются — только чистая правка.</p></div>
-            <div class="card" data-aos="fade-up" data-aos-delay="150"><span class="card-icon">✂️</span><h3>Сокращение</h3><p>Сжатие на 40–50% с сохранением главных мыслей и фактов. Убирает воду и повторы — текст становится ёмким.</p></div>
-            <div class="card" data-aos="fade-up" data-aos-delay="200"><span class="card-icon">📖</span><h3>Расширение</h3><p>Детализация, примеры и разъяснения. Черновик превращается в развёрнутый текст без потери стиля.</p></div>
-            <div class="card" data-aos="fade-up" data-aos-delay="250"><span class="card-icon">👁️</span><h3>Читаемость</h3><p>Короткие предложения, чёткие абзацы, списки. Сложные формулировки упрощаются без потери смысла.</p></div>
-            <div class="card" data-aos="fade-up" data-aos-delay="300"><span class="card-icon">😊</span><h3>Эмодзи и форматирование</h3><p>Snappy умеет возвращать результат сразу в формате Telegram: <strong>жирный</strong>, <em>курсив</em>, моноширинный текст и уместные эмодзи. Готово к отправке в чат — копировать не нужно.</p></div>
-            <div class="card" data-aos="fade-up" data-aos-delay="350"><span class="card-icon">🎭</span><h3>Стили</h3><p>Один черновик — разные тона: деловой, дружеский, нейтральный, продающий или юмористический.</p></div>
+            <div class="card" data-aos="fade-up" data-aos-delay="100">
+              <span class="card-icon">📝</span>
+              <h3>Исправление ошибок</h3>
+              <p>Орфография, пунктуация, грамматика и стиль. Смысл и структура сохраняются — только чистая правка.</p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="150">
+              <span class="card-icon">✂️</span>
+              <h3>Сокращение</h3>
+              <p>
+                Сжатие на 40–50% с сохранением главных мыслей и фактов. Убирает воду и повторы — текст становится ёмким.
+              </p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="200">
+              <span class="card-icon">📖</span>
+              <h3>Расширение</h3>
+              <p>Детализация, примеры и разъяснения. Черновик превращается в развёрнутый текст без потери стиля.</p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="250">
+              <span class="card-icon">👁️</span>
+              <h3>Читаемость</h3>
+              <p>Короткие предложения, чёткие абзацы, списки. Сложные формулировки упрощаются без потери смысла.</p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="300">
+              <span class="card-icon">😊</span>
+              <h3>Эмодзи и форматирование</h3>
+              <p>
+                Snappy умеет возвращать результат сразу в формате Telegram: <strong>жирный</strong>, <em>курсив</em>,
+                моноширинный текст и уместные эмодзи. Готово к отправке в чат — копировать не нужно.
+              </p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="350">
+              <span class="card-icon">🎭</span>
+              <h3>Стили</h3>
+              <p>Один черновик — разные тона: деловой, дружеский, нейтральный, продающий или юмористический.</p>
+            </div>
           </div>
         </section>
 
@@ -62,11 +108,17 @@
             <div class="example-row">
               <div class="example-box example-before">
                 <span class="example-title">Было</span>
-                <p>привет написал тебе вчера насчёт встречи не знаю получилось ли у тебя прочитать давай созвонимся в среду?</p>
+                <p>
+                  привет написал тебе вчера насчёт встречи не знаю получилось ли у тебя прочитать давай созвонимся в
+                  среду?
+                </p>
               </div>
               <div class="example-box example-after">
                 <span class="example-title">Стало</span>
-                <p>Привет! Написал тебе вчера насчёт встречи — не знаю, получилось ли у тебя прочитать. Давай созвонимся в среду?</p>
+                <p>
+                  Привет! Написал тебе вчера насчёт встречи — не знаю, получилось ли у тебя прочитать. Давай созвонимся
+                  в среду?
+                </p>
               </div>
             </div>
           </div>
@@ -80,7 +132,10 @@
               </div>
               <div class="example-box example-after">
                 <span class="example-title">Стало</span>
-                <p>Эй, друзья! 👋 Семинар переносим на <strong>15:00</strong> — предупреждаю заранее, чтобы все успели. До встречи! ✨</p>
+                <p>
+                  Эй, друзья! 👋 Семинар переносим на <strong>15:00</strong> — предупреждаю заранее, чтобы все успели.
+                  До встречи! ✨
+                </p>
               </div>
             </div>
           </div>
@@ -90,11 +145,17 @@
             <div class="example-row">
               <div class="example-box example-before">
                 <span class="example-title">Было</span>
-                <p>Мы занимаемся доставкой по городу в течение 2 часов при заказе от 1000 рублей при этом у нас действует скидка 10% для новых клиентов.</p>
+                <p>
+                  Мы занимаемся доставкой по городу в течение 2 часов при заказе от 1000 рублей при этом у нас действует
+                  скидка 10% для новых клиентов.
+                </p>
               </div>
               <div class="example-box example-after">
                 <span class="example-title">Стало</span>
-                <p>Доставка по городу — <strong>до 2 часов</strong> 🚚<br><br>• При заказе от 1000 ₽<br>• <em>Скидка 10%</em> для новых клиентов 🎁</p>
+                <p>
+                  Доставка по городу — <strong>до 2 часов</strong> 🚚<br /><br />• При заказе от 1000 ₽<br />•
+                  <em>Скидка 10%</em> для новых клиентов 🎁
+                </p>
               </div>
             </div>
           </div>
@@ -102,7 +163,9 @@
 
         <section class="section section-alt">
           <h2 data-aos="fade-up">🎭 Готовые стили текста</h2>
-          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
+          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+            Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.
+          </p>
           <ul class="styles-list">
             <li data-aos="fade" data-aos-delay="80"><strong>Деловой</strong> — официально и по делу</li>
             <li data-aos="fade" data-aos-delay="120"><strong>Дружеский</strong> — тепло и на «ты»</li>
@@ -129,7 +192,14 @@
         <section class="cta-block" data-aos="zoom-in">
           <h2>💬 Попробуйте Snappy</h2>
           <p>Откройте бота в Telegram и обработайте первый текст за минуту.</p>
-          <a href="https://t.me/sn4ppy_bot" class="btn btn-primary btn-lg" target="_blank" rel="noopener"><span class="icon-telegram" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg></span>Открыть в Telegram</a>
+          <a href="https://t.me/sn4ppy_bot" class="btn btn-primary btn-lg" target="_blank" rel="noopener"
+            ><span class="icon-telegram" aria-hidden="true"
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                <path
+                  d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"
+                /></svg></span
+            >Открыть в Telegram</a
+          >
         </section>
       </article>
     </main>
@@ -146,7 +216,7 @@
         duration: 400,
         easing: "ease-out-cubic",
         once: true,
-        offset: 60
+        offset: 60,
       });
     </script>
   </body>
