--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Snappy — ИИ для текста в Telegram: правка, сокращение, стиль за секунды</title>
     <meta
       name="description"
-      content="Исправляйте ошибки, меняйте стиль и тон текста за секунды. Бот в Telegram с искусственным интеллектом — без копирования в сторонние сервисы."
+      content="Исправляйте ошибки, сокращайте и меняйте тон текста за секунды. Snappy — умный бот в Telegram для постов, писем и объявлений. Результат сразу в чате."
     />
-    <title>Snappy — умная обработка текста в Telegram</title>
+    <meta name="keywords" content="редактор текста, исправление ошибок, сократить текст, изменить стиль текста, ИИ для текста, бот Telegram, правка текста" />
+    <link rel="canonical" href="https://sn4ppy.github.io/snappy/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Snappy — ИИ для текста в Telegram" />
+    <meta property="og:description" content="Правка, сокращение и смена тона текста за секунды. Результат сразу в чате — для постов, писем и объявлений." />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:url" content="https://sn4ppy.github.io/snappy/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Snappy — ИИ для текста в Telegram" />
+    <meta name="twitter:description" content="Правка, сокращение и смена тона текста за секунды. Результат сразу в чате." />
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
