--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -37,6 +37,8 @@
         <nav>
           <a href="#features">Возможности</a>
           <a href="#examples">Примеры</a>
+          <a href="#who">Для кого</a>
+          <a href="#faq">Вопросы</a>
           <a href="#start">Как начать</a>
           <a href="https://t.me/sn4ppy_bot" class="nav-cta" target="_blank" rel="noopener"
             ><span class="icon-telegram" aria-hidden="true"
@@ -188,6 +190,68 @@
             <li data-aos="fade" data-aos-delay="200"><strong>Продающий</strong> — выгоды и призывы к действию</li>
             <li data-aos="fade" data-aos-delay="240"><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
           </ul>
+        </section>
+
+        <section id="who" class="section">
+          <h2 data-aos="fade-up">👥 Для кого Snappy</h2>
+          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+            Тем, кто пишет в мессенджерах и соцсетях и хочет тратить меньше времени на правки и упаковку текста.
+          </p>
+          <div class="features-grid">
+            <div class="card" data-aos="fade-up" data-aos-delay="100">
+              <span class="card-icon">📱</span>
+              <h3>SMM и контент-менеджеры</h3>
+              <p>Посты, сторис, объявления — один черновик и несколько вариантов тона или длины без копирования в сторонние сервисы.</p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="150">
+              <span class="card-icon">✉️</span>
+              <h3>Работа с письмами и чатами</h3>
+              <p>Короткие ответы клиентам, уведомления коллегам, объявления — исправить тон и ошибки прямо в Telegram.</p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="200">
+              <span class="card-icon">📄</span>
+              <h3>Объявления и описания</h3>
+              <p>Текст для Авито, досок объявлений, карточек товаров: сократить воду, добавить структуру, подправить стиль.</p>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-delay="250">
+              <span class="card-icon">🎓</span>
+              <h3>Учёба и личное</h3>
+              <p>Сообщения преподавателям, резюме, сопроводительные — проверить орфографию и тон, не выходя из мессенджера.</p>
+            </div>
+          </div>
+        </section>
+
+        <section id="faq" class="section section-alt">
+          <h2 data-aos="fade-up">❓ Частые вопросы</h2>
+          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+            Краткие ответы на то, что чаще всего спрашивают про Snappy.
+          </p>
+          <dl class="faq-list">
+            <div class="faq-item" data-aos="fade-up" data-aos-delay="80">
+              <dt>Snappy бесплатный?</dt>
+              <dd>Да. Бот в Telegram бесплатен для использования. Часть возможностей может быть ограничена или расширена за счёт подписки — актуальные условия смотрите в самом боте.</dd>
+            </div>
+            <div class="faq-item" data-aos="fade-up" data-aos-delay="120">
+              <dt>Нужна ли регистрация?</dt>
+              <dd>Нет. Достаточно открыть бота в Telegram и начать отправлять текст. Отдельный аккаунт на сайте не требуется.</dd>
+            </div>
+            <div class="faq-item" data-aos="fade-up" data-aos-delay="160">
+              <dt>На каких языках работает бот?</dt>
+              <dd>Snappy ориентирован на русский язык: правка, сокращение и смена стиля выполняются с учётом русской орфографии и норм. Отдельные действия могут поддерживать и другие языки — проверьте в интерфейсе бота.</dd>
+            </div>
+            <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
+              <dt>Сохраняются ли мои тексты?</dt>
+              <dd>Тексты обрабатываются для получения результата и не используются для обучения моделей. Подробности — в политике конфиденциальности бота (если доступна в Telegram).</dd>
+            </div>
+            <div class="faq-item" data-aos="fade-up" data-aos-delay="240">
+              <dt>Есть ли ограничение по длине текста?</dt>
+              <dd>Да, у сообщений в Telegram и у модели есть лимиты. Очень длинные тексты может потребоваться разбить на части. Точные лимиты указаны в боте.</dd>
+            </div>
+            <div class="faq-item" data-aos="fade-up" data-aos-delay="280">
+              <dt>Чем Snappy отличается от других редакторов?</dt>
+              <dd>Всё происходит внутри Telegram: не нужно копировать текст на сайт или в приложение. Выбор действия — кнопками, результат сразу в чате, в том числе с форматированием и эмодзи для постов и объявлений.</dd>
+            </div>
+          </dl>
         </section>
 
         <section id="start" class="section">
