--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -8,20 +8,29 @@
       name="description"
       content="Исправляйте ошибки, сокращайте и меняйте тон текста за секунды. Snappy — умный бот в Telegram для постов, писем и объявлений. Результат сразу в чате."
     />
-    <meta name="keywords" content="редактор текста, исправление ошибок, сократить текст, изменить стиль текста, ИИ для текста, бот Telegram, правка текста" />
+    <meta
+      name="keywords"
+      content="редактор текста, исправление ошибок, сократить текст, изменить стиль текста, ИИ для текста, бот Telegram, правка текста"
+    />
     <link rel="canonical" href="https://sn4ppy.github.io/snappy/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Snappy — ИИ для текста в Telegram" />
-    <meta property="og:description" content="Правка, сокращение и смена тона текста за секунды. Результат сразу в чате — для постов, писем и объявлений." />
+    <meta
+      property="og:description"
+      content="Правка, сокращение и смена тона текста за секунды. Результат сразу в чате — для постов, писем и объявлений."
+    />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:url" content="https://sn4ppy.github.io/snappy/" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Snappy — ИИ для текста в Telegram" />
-    <meta name="twitter:description" content="Правка, сокращение и смена тона текста за секунды. Результат сразу в чате." />
+    <meta
+      name="twitter:description"
+      content="Правка, сокращение и смена тона текста за секунды. Результат сразу в чате."
+    />
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -201,22 +210,33 @@
             <div class="card" data-aos="fade-up" data-aos-delay="100">
               <span class="card-icon">📱</span>
               <h3>SMM и контент-менеджеры</h3>
-              <p>Посты, сторис, объявления — один черновик и несколько вариантов тона или длины без копирования в сторонние сервисы.</p>
+              <p>
+                Посты, сторис, объявления — один черновик и несколько вариантов тона или длины без копирования в
+                сторонние сервисы.
+              </p>
             </div>
             <div class="card" data-aos="fade-up" data-aos-delay="150">
               <span class="card-icon">✉️</span>
               <h3>Работа с письмами и чатами</h3>
-              <p>Короткие ответы клиентам, уведомления коллегам, объявления — исправить тон и ошибки прямо в Telegram.</p>
+              <p>
+                Короткие ответы клиентам, уведомления коллегам, объявления — исправить тон и ошибки прямо в Telegram.
+              </p>
             </div>
             <div class="card" data-aos="fade-up" data-aos-delay="200">
               <span class="card-icon">📄</span>
               <h3>Объявления и описания</h3>
-              <p>Текст для Авито, досок объявлений, карточек товаров: сократить воду, добавить структуру, подправить стиль.</p>
+              <p>
+                Текст для Авито, досок объявлений, карточек товаров: сократить воду, добавить структуру, подправить
+                стиль.
+              </p>
             </div>
             <div class="card" data-aos="fade-up" data-aos-delay="250">
               <span class="card-icon">🎓</span>
               <h3>Учёба и личное</h3>
-              <p>Сообщения преподавателям, резюме, сопроводительные — проверить орфографию и тон, не выходя из мессенджера.</p>
+              <p>
+                Сообщения преподавателям, резюме, сопроводительные — проверить орфографию и тон, не выходя из
+                мессенджера.
+              </p>
             </div>
           </div>
         </section>
@@ -229,27 +249,45 @@
           <dl class="faq-list">
             <div class="faq-item" data-aos="fade-up" data-aos-delay="80">
               <dt>Snappy бесплатный?</dt>
-              <dd>Да. Бот в Telegram бесплатен для использования. Часть возможностей может быть ограничена или расширена за счёт подписки — актуальные условия смотрите в самом боте.</dd>
+              <dd>
+                Да. Бот в Telegram бесплатен для использования. Часть возможностей может быть ограничена или расширена
+                за счёт подписки — актуальные условия смотрите в самом боте.
+              </dd>
             </div>
             <div class="faq-item" data-aos="fade-up" data-aos-delay="120">
               <dt>Нужна ли регистрация?</dt>
-              <dd>Нет. Достаточно открыть бота в Telegram и начать отправлять текст. Отдельный аккаунт на сайте не требуется.</dd>
+              <dd>
+                Нет. Достаточно открыть бота в Telegram и начать отправлять текст. Отдельный аккаунт на сайте не
+                требуется.
+              </dd>
             </div>
             <div class="faq-item" data-aos="fade-up" data-aos-delay="160">
               <dt>На каких языках работает бот?</dt>
-              <dd>Snappy ориентирован на русский язык: правка, сокращение и смена стиля выполняются с учётом русской орфографии и норм. Отдельные действия могут поддерживать и другие языки — проверьте в интерфейсе бота.</dd>
+              <dd>
+                Snappy ориентирован на русский язык: правка, сокращение и смена стиля выполняются с учётом русской
+                орфографии и норм. Отдельные действия могут поддерживать и другие языки — проверьте в интерфейсе бота.
+              </dd>
             </div>
             <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
               <dt>Сохраняются ли мои тексты?</dt>
-              <dd>Тексты обрабатываются для получения результата и не используются для обучения моделей. Подробности — в политике конфиденциальности бота (если доступна в Telegram).</dd>
+              <dd>
+                Тексты обрабатываются для получения результата и не используются для обучения моделей. Подробности — в
+                политике конфиденциальности бота (если доступна в Telegram).
+              </dd>
             </div>
             <div class="faq-item" data-aos="fade-up" data-aos-delay="240">
               <dt>Есть ли ограничение по длине текста?</dt>
-              <dd>Да, у сообщений в Telegram и у модели есть лимиты. Очень длинные тексты может потребоваться разбить на части. Точные лимиты указаны в боте.</dd>
+              <dd>
+                Да, у сообщений в Telegram и у модели есть лимиты. Очень длинные тексты может потребоваться разбить на
+                части. Точные лимиты указаны в боте.
+              </dd>
             </div>
             <div class="faq-item" data-aos="fade-up" data-aos-delay="280">
               <dt>Чем Snappy отличается от других редакторов?</dt>
-              <dd>Всё происходит внутри Telegram: не нужно копировать текст на сайт или в приложение. Выбор действия — кнопками, результат сразу в чате, в том числе с форматированием и эмодзи для постов и объявлений.</dd>
+              <dd>
+                Всё происходит внутри Telegram: не нужно копировать текст на сайт или в приложение. Выбор действия —
+                кнопками, результат сразу в чате, в том числе с форматированием и эмодзи для постов и объявлений.
+              </dd>
             </div>
           </dl>
         </section>
