--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -40,6 +40,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="bg-blobs" aria-hidden="true">
+      <span class="bg-blob bg-blob-1"></span>
+      <span class="bg-blob bg-blob-2"></span>
+      <span class="bg-blob bg-blob-3"></span>
+    </div>
     <header class="site-header">
       <div class="header-inner">
         <a href="/" class="logo">Snappy</a>
