--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -47,7 +47,7 @@
     </div>
     <header class="site-header">
       <div class="header-inner">
-        <a href="/" class="logo">Snappy</a>
+        <a href="/" class="logo">⚡ Snappy</a>
         <nav>
           <a href="#features">Возможности</a>
           <a href="#examples">Примеры</a>
@@ -312,7 +312,7 @@
     </main>
     <footer class="site-footer">
       <div class="footer-inner">
-        <span class="logo">Snappy</span>
+        <span class="logo">⚡ Snappy</span>
         <p>Умная обработка текста в Telegram с искусственным интеллектом.</p>
         <a href="https://t.me/sn4ppy_bot" target="_blank" rel="noopener">@sn4ppy_bot</a>
       </div>
