--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -137,6 +137,7 @@
                   среду?
                 </p>
               </div>
+              <span class="example-arrow" aria-hidden="true">→</span>
               <div class="example-box example-after">
                 <span class="example-title">Стало</span>
                 <p>
@@ -154,6 +155,7 @@
                 <span class="example-title">Было</span>
                 <p>Семинар переносится на 15:00. Уведомляю всех участников.</p>
               </div>
+              <span class="example-arrow" aria-hidden="true">→</span>
               <div class="example-box example-after">
                 <span class="example-title">Стало</span>
                 <p>
@@ -174,6 +176,7 @@
                   скидка 10% для новых клиентов.
                 </p>
               </div>
+              <span class="example-arrow" aria-hidden="true">→</span>
               <div class="example-box example-after">
                 <span class="example-title">Стало</span>
                 <p>
