--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -185,7 +185,7 @@
           </div>
         </section>
 
-        <section class="section section-alt">
+        <section class="section">
           <h2 data-aos="fade-up">🎭 Готовые стили текста</h2>
           <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
             Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.
@@ -239,7 +239,7 @@
           </div>
         </section>
 
-        <section id="faq" class="section section-alt">
+        <section id="faq" class="section">
           <h2 data-aos="fade-up">❓ Частые вопросы</h2>
           <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
             Краткие ответы на то, что чаще всего спрашивают про Snappy.
@@ -292,16 +292,16 @@
 
         <section id="start" class="section">
           <h2 data-aos="fade-up">🚀 Как начать</h2>
+          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+            Подходит для соцсетей, писем, объявлений и любых задач, где важны скорость и качество текста. Быстрее и
+            проще, чем править вручную или гонять текст по разным сервисам.
+          </p>
           <ol class="steps" data-aos="fade-up" data-aos-delay="100">
             <li>Добавьте Snappy в Telegram по ссылке ниже.</li>
             <li>Отправьте боту любой текст — сообщение, пост или черновик.</li>
             <li>Выберите действие: исправить, сократить, расширить, изменить стиль и т.д.</li>
             <li>Получите результат сразу в чате.</li>
           </ol>
-          <p class="section-note" data-aos="fade-up" data-aos-delay="150">
-            Подходит для соцсетей, писем, объявлений и любых задач, где важны скорость и качество текста. Быстрее и
-            проще, чем править вручную или гонять текст по разным сервисам.
-          </p>
         </section>
 
         <section class="cta-block" data-aos="zoom-in">
